# zk-jam-service

./: .gitignore  Cargo.toml  README.md  deploy.ts  docker-compose.testnet.yml  docker-compose.yml  my-jam-service.jam  package-lock.json  package.json  zk-jam-service.jam  zk-proof-testing-plan.md
.github/workflows/: publish-web.yml
circuits/voting/: Cargo.toml  Dockerfile  README.md
circuits/voting/src/: main.rs
client/: README.md  package-lock.json  package.json
client/src/: config.ts  hash-verify.ts  monitor.ts  query-state.ts  submit-proof.ts
client/src/backends/: index.ts  lasair.ts  polkajam.ts  types.ts
client/src/utils/: encoding.ts  rpc.ts
client/web/: Dockerfile  README.md  next.config.ts  package-lock.json  package.json
client/web/src/app/: globals.css  layout.tsx  page.tsx
client/web/src/app/actions/: jam.ts
client/web/src/app/api/network/: route.ts
client/web/src/app/explorer/: page.tsx
client/web/src/app/learn/: page.tsx
client/web/src/app/verify/: page.tsx
client/web/src/app/vote/: page.tsx
client/web/src/components/: Pipeline.tsx  Providers.tsx  ServiceSelector.tsx  VerificationHistory.tsx
client/web/src/components/layout/: Header.tsx
client/web/src/contexts/: ServiceContext.tsx
client/web/src/lib/: history.ts  jam-backend.ts  jam-rpc.ts
docs/: BLUEPRINT.md  FEASIBILITY.md  RUN_FROM_SOURCE.md  USEFUL_SERVICE_DESIGN.md
docs/research/: AZTEC_FINDINGS.md
services/voting/: Cargo.toml  README.md  voting-service.jam
services/voting/src/: lib.rs
spikes/crypto-gas/: README.md  bench.py
spikes/crypto-gas/crypto-service/: Cargo.toml  crypto-service.jam
spikes/crypto-gas/crypto-service/src/: lib.rs
spikes/fba-zk/: README.md  bench.py
spikes/fba-zk/circuit/: Cargo.toml
spikes/fba-zk/circuit/src/: main.rs
spikes/fba-zk/fba-service/: Cargo.toml  fba-service.jam
spikes/fba-zk/fba-service/src/: lib.rs
spikes/groth16-gas/: README.md
spikes/groth16-gas/gen-proof/: Cargo.toml
spikes/groth16-gas/gen-proof/src/: main.rs
spikes/groth16-gas/groth16-service/: Cargo.toml  groth16-service.jam
spikes/groth16-gas/groth16-service/src/: lib.rs
spikes/vdec-gas/: README.md  bench.py
spikes/vdec-gas/committee/: Cargo.toml
spikes/vdec-gas/committee/src/: main.rs
spikes/vdec-gas/vdec-core/: Cargo.toml
spikes/vdec-gas/vdec-core/src/: lib.rs
spikes/vdec-gas/vdec-service/: Cargo.toml  vdec-service.jam
spikes/vdec-gas/vdec-service/src/: lib.rs
src/: lib.rs
