[package]
name = "zk-jam-service"
version = "0.1.0"
edition = "2021"
license = "Apache-2.0"
authors = ["abutlabs <abutlabs@gmx.com>"]

[dependencies]
jam-pvm-common = { version = "0.1.26", default-features = false, features = ["service"] }
polkavm-derive = "0.29"
blake2 = { version = "0.10", default-features = false }

[profile.release]
panic = "abort"
lto = true
opt-level = 'z'