[package]
name = "voting"
version = "0.0.0"
edition = "2021"

[dependencies]
ark-bn254 = "0.5"
ark-groth16 = "0.5"
ark-ec = "0.5"
ark-ff = "0.5"
ark-relations = "0.5"
ark-r1cs-std = "0.5"
ark-serialize = "0.5"
ark-snark = "0.5"
ark-std = "0.5"
ark-crypto-primitives = { version = "0.5", features = ["crh", "sponge", "r1cs"] }
