[package]
name = "crypto-service"
version = "0.0.0"
edition = "2021"
license = "Apache-2.0"

[dependencies]
jam-pvm-common = { version = "0.1.26", default-features = false, features = ["service"] }
polkavm-derive = "0.29"
# The SAME libraries jamswap uses in production, so the gas numbers are the real
# per-op costs a JAM service pays — not a proxy.
ed25519-compact = { version = "2", default-features = false }
blake2 = { version = "0.10", default-features = false }

[profile.release]
panic = "abort"
lto = true
opt-level = 'z'
