[package]
name = "vdec-service"
version = "0.0.0"
edition = "2021"
license = "Apache-2.0"

[dependencies]
jam-pvm-common = { version = "0.1.26", default-features = false, features = ["service"] }
polkavm-derive = "0.29"
vdec-core = { path = "../vdec-core" }

[profile.release]
panic = "abort"
lto = true
opt-level = 'z'
